[gd_scene load_steps=8 format=3 uid="uid://dmuk5j1vwpoqf"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_6tgr3"]
[ext_resource type="FontFile" uid="uid://ccu6jholutsm4" path="res://Assets/Fonts/Chewy-Regular.ttf" id="2_lhsny"]
[ext_resource type="Texture2D" uid="uid://ci8djy5v8ei03" path="res://Assets/Cyrielle/interactions_tuto.png" id="3_34ldb"]
[ext_resource type="Theme" uid="uid://c4vl7jpvynye1" path="res://Assets/theme.tres" id="4_tv4ip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wflug"]
bg_color = Color(0.362829, 0.362829, 0.362829, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkqvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3milt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tgr3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1150.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wflug")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -105.0
offset_right = 145.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_lhsny")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_vkqvp")
text = "Continuer
"

[node name="text" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 23.0
offset_right = 1104.0
offset_bottom = 276.0
theme_override_fonts/font = ExtResource("2_lhsny")
theme_override_font_sizes/font_size = 35
text = "Attention tout se détruit ! 
Vous jouerez 3 parties de 5 minutes : gérez vos ressources et essayez d'obtenir le plus de points possible !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="controls" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 286.0
offset_right = 1131.0
offset_bottom = 537.0
theme_override_fonts/font = ExtResource("2_lhsny")
theme_override_font_sizes/font_size = 30
text = "Cultivez du blé, transformez-le et vendez la farine pour avoir le plus de points possible !
Déplacement : WASD ou flèches
Utilisation des objets : Espace une fois en main (appuyez sur 1, 2, 3, 4, 5, 6, 7, 8, 9 pour changer d'objet)
Réparer un bâtiment : Prendre le marteau en main et appuyer sur R"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Interactions" type="Sprite2D" parent="Panel"]
visible = false
position = Vector2(638, 323)
scale = Vector2(1, 0.9)
texture = ExtResource("3_34ldb")

[node name="Start" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -47.0
offset_right = 135.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_tv4ip")
theme_override_font_sizes/font_size = 40
text = "Commencer"

[node name="ToEnd" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.5
offset_top = -245.0
offset_right = 164.5
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_tv4ip")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_3milt")
text = "Aller à la fin"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/ToEnd" to="." method="_on_to_end_pressed"]
